--- a/movie.html
+++ b/movie.html
@@ -142,7 +142,7 @@
         </div>
 
         <ul class="right_nav">
-            <li><a id="home" href="home.html">Home</a></li>
+            <li><a id="home" href="movie_search.html">Home</a></li>
             <li><a href="">Login</a></li>
             <li><a id="signup" href="signup.html">Signup</a></li>
         </ul>
