popular movies uppended on main page

--- a/movie.html
+++ b/movie.html
@@ -286,27 +286,7 @@
         }
 
         catch (err) {
-            // poster_container.innerHTML = null;
-
-            // console.log('avinash');
-
-            // let massage = document.createElement('h1');
-
-            // massage.textContent = "Movie not found";
-
-            // poster_container.style.display = "block"
-
-            // poster_container.style.textAlign ="center"
-
-
-            // poster_container.append(massage)
-
-            // function movie(){
-            //     window.location.href = "movie.html" 
-            // }
-            // movie();
-
-            // console.log(err);
+           console.log(err);
 
         }
 
@@ -400,8 +380,17 @@
 
 
 
+    
+
 
 
 
 
 </script>
+
+
+
+
+
+
+
