--- a/movie_search.html
+++ b/movie_search.html
@@ -66,8 +66,7 @@
 
         .right_nav {
             display: flex;
-            width: 15%;
-            ;
+            width: 10%;
             justify-content: space-between;
             position: absolute;
             right: 2%;
@@ -169,8 +168,8 @@
 
         <ul class="right_nav">
             <li><a id="home" href="home.html">Home</a></li>
-            <li><a href="">Login</a></li>
-            <li><a id="signup" href="signup.html">Signup</a></li>
+            <li><a href="login.html">Login</a></li>
+           
         </ul>
     </nav>
 
@@ -234,6 +233,8 @@
 
 
             let movies = await res.json();
+
+            console.log(movies);
 
             return movies
         }
@@ -372,8 +373,6 @@ PopularMovies()
 function uppendMovies(movies_list){
 
     movies_list.forEach((movie) => {
-
-        console.log(movie);
 
         let {title,poster_path,overview,release_date} = movie;
 
